chore: slightly modify (simplify) schema + fix `pnpm catalog:validate` errors
